packages/evershop/src/lib/middleware/tests/app/modules/error/pages/frontStore/errorHandlerTest/errorInSync.js
const jest = require('jest-mock');

module.exports = jest.fn((request, response, delegates) => {
  throw new Error('Error in sync');
});
